# biscvi

./: Cargo.toml  Makefile  README.md  config.json  config.json.template
app/: Cargo.toml  index.html
app/src/: appstate.rs  camera.rs  closestpoint.rs  component_about_model.rs  component_gbrowser_model.rs  component_reduction_left.rs  component_reduction_main.rs  component_reduction_model.rs  component_reduction_right.rs  component_umap.rs  component_umap_left.rs  component_umap_main.rs  component_umap_right.rs  core_model.rs  histogram.rs  main.rs  model_dimred.rs  model_files.rs  umap.vert  umap_index.rs
app/src/about/: about_model.rs  mod.rs
app/src/fileview/: fileview_model.rs  mod.rs
app/src/gbrowser/: gbrowser_cam.rs  gbrowser_data.rs  gbrowser_main.rs  gbrowser_model.rs  mod.rs
app/src/redview/: mod.rs  redview_camera.rs  redview_closestpoint.rs  redview_left.rs  redview_main.rs  redview_model.rs
app/style/: style.scss
server/: Cargo.toml
server/src/: countfile.rs  err.rs  gbrowser_gff.rs  gbrowser_noodles.rs  index.rs  main.rs
src/: countfile_struct.rs  gbrowser_struct.rs  lib.rs
