[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
my-web-app = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
csv = "1.2.2"
lazy_static = "1.5.0"
rusqlite = { version = "0.37.0", features = ["column_metadata"] }
async-stream = "0.3.6"
archflow = "0.1.4"
tokio = "1.47.0"
tokio-util = {version = "0.7.15", features=["io"]}
anyhow = "1.0.100"
hdf5 = "0.8.1"
serde_cbor = "0.11.2"
ndarray = "0.15.6"
actix-error = "0.2.11"

flate2 = { version = "1.0.28", features = ["zlib-rs"], default-features = false }
noodles = { version = "0.97.0", features = ["bam", "cram", "fastq", "sam", "gff", "gtf", "bgzf", "async"] }
bstr = { version = "1.12.1", features = ["serde"] }

#https://docs.rs/archflow/latest/archflow/
